@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-26T01:22:54Z",
-  "count_outdated" : 291,
-  "uniques_outdated" : 160,
-  "count" : 323,
+  "timestamp" : "2022-05-26T16:23:21Z",
+  "count_outdated" : 293,
+  "uniques_outdated" : 161,
+  "count" : 324,
   "uniques" : 181,
   "clones" : [
-    {
-      "timestamp": "2022-05-12T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-13T00:00:00Z",
       "count": 2,
